# VidSynth

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASSIGNMENT_BOOK.md  CLAUDE.md  OPENING_REPORT.md  PROGRESS.md  README.md  STAGE0_PLAN.md  STAGE1_PLAN.md  STAGE2_PLAN.md  STAGE3_4_PLAN.md  UI_USER_GUIDE.md  UNIFIED_SYSTEM_DESIGN.md  cluster.md  pyproject.toml
.serena/: project.yml
VidSynth-Visualizer/: App.tsx  constants.ts  types.ts
VidSynth-Visualizer/components/: LogConsoleModal.tsx  ProjectConfigModal.tsx  SettingsPanel.tsx  Step1Segmentation.tsx  Step2Semantic.tsx  Step3Log.tsx  Step4FinalCut.tsx  TopBar.tsx
VidSynth-Visualizer/context/: LogContext.tsx
configs/: README.md  baseline.yaml
develop_docs/: MVP_framework.md
docs/: CONFIG_CLI.md  DEV_LOG.md  PROGRESS.md  STAGE1_PLAN.md  STAGE3_4_PLAN.md  STEP1_VALIDATION.md
scripts/: README.md  cluster_analysis.py  create_dummy_test_data.py  dev_start.sh  e2e_full_pipeline_test.py  step1_preview_with_black.py
src/vidsynth/: __init__.py  cli.py
src/vidsynth/cluster/: __init__.py  composer.py  engine.py
src/vidsynth/core/: __init__.py  config.py  datamodels.py  logging_utils.py  paths.py
src/vidsynth/export/: exporter.py
src/vidsynth/segment/: __init__.py  clipper.py  loader.py  (+4 more)
tests/: README.md  test_cli.py
tests/core/: test_config.py  test_datamodels.py
tests/data/: README.md
tests/segment/: test_clipper.py  test_segment_pipeline.py  test_shot_detector.py
tests/theme_match/: test_match_theme_cli.py  test_prototypes.py  test_scoring.py
workspace/: README.md
(+22 files in other folders)
